# QUICK

./: .gitignore  .gitmodules  .out  .out~  .qout  .qout~  AGENTS.md  CMake-Options.md  CMakeLists.txt  Dockerfile  Makefile  QUICKConfig.cmake.in  README  README.md  bckup_Makefile  compile.sh  configure  hello_ai.txt  make.in  make.in.cuda  make.in.gnu  make.in.openmp  readme.txt  test_quick_api_module.f90  test_quickapi.f90  test_token.txt  testqk.sh
cmake/BundleOSXDependencies/: BundleOSXDependencies.cmake  CMakeLists.txt
cmake/FixCondaShebang/: CMakeLists.txt  FixCondaShebang.cmake
src/: .hfoperator.f90.swp  2eshelloptdft.f90  CMakeLists.txt  CPHF.f90  MFCC.f90  a.cu  amber_interface.f90  basis.f90  bckup_dft.f90  bckup_gradient.f90  calMP2.f90  calmp2divcon.f90  config.h  debug_quick.f90  depend  depend2  dft.f90  dftgrad.f90  dftgradmpi.f90  dftmpi.f90  dipole.f90  ecp.f90  electdii.f90  fake_amber_interface.f90  finalize.f90  fmm.f90  frequency.f90  getEnergy.f90  getMol.f90  getMolSad.f90  gradient.f90  hess_dft.f90  hessian.f90  hfoperator.f90  inidivcon.f90  initialize.f90  main.f90  mpi_fake.f90  mpi_setup.f90  newblyp.f90  (+19 more)
src/BLAS/: Makefile  make.inc
src/blas/: CMakeLists.txt  Makefile
src/config/: config.MPI.h  config.cuda.SP.h  config.cuda.h  config.mpi.cuda.h
src/cuda/: .gpu.cu.swp  CMakeLists.txt  Makefile  bckup_gpu.cu  bckup_gpu_libxc.cu  boys_functions.h  gpu.cu  gpu.h  gpu_MP2.cu  gpu_cew_quad.h  gpu_cew_xc.h  gpu_common.h  gpu_custom_matops.cu  gpu_eri_assembler_sp.h  gpu_eri_assembler_spd.h  gpu_eri_assembler_spdf_1.h  gpu_eri_assembler_spdf_1_2.h  gpu_eri_assembler_spdf_2.h  gpu_eri_assembler_spdf_2_2.h  gpu_eri_assembler_spdf_3.h  gpu_eri_assembler_spdf_3_2.h  gpu_eri_assembler_spdf_4.h  gpu_eri_assembler_spdf_4_2.h  gpu_eri_assembler_spdf_5.h  gpu_eri_assembler_spdf_5_2.h  gpu_eri_assembler_spdf_6.h  gpu_eri_assembler_spdf_6_2.h  gpu_eri_assembler_spdf_7.h  gpu_eri_assembler_spdf_7_2.h  gpu_eri_assembler_spdf_8.h  gpu_eri_assembler_spdf_8_2.h  gpu_eri_grad_assembler_sp.h  gpu_eri_grad_assembler_spd.h  gpu_eri_grad_assembler_spd_2.h  gpu_eri_grad_assembler_spdf_0_1.h  gpu_eri_grad_assembler_spdf_0_2.h  gpu_eri_grad_assembler_spdf_1.h  gpu_eri_grad_assembler_spdf_2.h  gpu_eri_grad_assembler_spdf_3.h  gpu_eri_grad_assembler_spdf_4.h  (+53 more)
src/deprecated/: amber_interface.f90  calmp2divcon.f90  debug_quick.f90  dipole.f90  mpi_fake.f90
src/dftd3/: Makefile  api.f90  core.f90
src/dlfind/: -r  CHEMSH_INTERFACE  CMakeLists.txt  COPYING  Makefile  Makefile.in.castep  Makefile.in.chemsh  Makefile.in.crystal  Makefile.in.gamess  Makefile.tmp  coords.xyz  dependencies.txt  dl-find.f90  dl_find.f90  dlf.c  dlf.tcl  dlf_allocate.f90  dlf_checkpoint.f90  dlf_cinter.f90  dlf_conint.f90  dlf_convergence.f90  dlf_coords.f90  dlf_dimer.f90  dlf_formstep.f90  dlf_geodesic.f90  dlf_global_module.f90  dlf_gpr_hdlc.f90  dlf_gprmep.f90  dlf_hdlc_constraint.f90  dlf_hdlc_hdlclib.f90  dlf_hdlc_interface.f90  dlf_hdlc_matrixlib.f90  dlf_hdlc_primitive.f90  dlf_lbfgs.f90  dlf_linalg.f90  dlf_linalg_interface_mod.f90  dlf_microiter.f90  dlf_mpi.f90  dlf_neb.f90  dlf_oop_lbfgs.f90  (+53 more)
src/dnc/: MFCC.f90  calmp2divcon.f90  dnc_calMP2.f90  dnc_dft.f90  dnc_hfoperator.f90  dnc_scf.f90  dnc_scf_operator.f90  dnc_shell.f90  dnc_uscf.f90  dnc_uscf_operator.f90  dncscf.f90  inidivcon.f90  mfcc_init_guess.f90  mfcc_start.f90  one_el_int_dnc.f90  shell_dnc_hf.f90
src/gpu/: gpu_MP2.cu  gpu_cew_quad.h  gpu_common.h  gpu_eri_assembler_sp.h  gpu_eri_assembler_spd.h  gpu_eri_assembler_spdf_1.h  gpu_eri_assembler_spdf_1_2.h  gpu_eri_assembler_spdf_2.h  gpu_eri_assembler_spdf_2_2.h  gpu_eri_assembler_spdf_3.h  gpu_eri_assembler_spdf_3_2.h  gpu_eri_assembler_spdf_4.h  gpu_eri_assembler_spdf_4_2.h  gpu_eri_assembler_spdf_5.h  gpu_eri_assembler_spdf_5_2.h  gpu_eri_assembler_spdf_6.h  gpu_eri_assembler_spdf_6_2.h  gpu_eri_assembler_spdf_7.h  gpu_eri_assembler_spdf_7_2.h  gpu_eri_assembler_spdf_8.h  gpu_eri_assembler_spdf_8_2.h  gpu_eri_grad_assembler_sp.h  gpu_eri_grad_assembler_spd.h  gpu_eri_grad_assembler_spd_2.h  gpu_eri_grad_assembler_spdf_1.h  gpu_eri_grad_assembler_spdf_2.h  gpu_eri_grad_assembler_spdf_3.h  gpu_eri_grad_assembler_spdf_4.h  gpu_eri_grad_assembler_spdf_5.h  gpu_eri_grad_assembler_spdf_6.h  gpu_eri_grad_assembler_spdf_7_1.h  gpu_eri_grad_assembler_spdf_7_2.h  gpu_eri_grad_assembler_spdf_7_3.h  gpu_eri_grad_vrr_dddd_1.h  gpu_eri_grad_vrr_dddd_2.h  gpu_eri_grad_vrr_ffff.h  gpu_fmt.h  gpu_get2e_getxc_drivers.h  gpu_get2e_subs.h  gpu_get2e_subs_grad.h  (+22 more)
src/hip/: CMakeLists.txt  Makefile  gpu.cu  gpu.h  gpu_MP2.cu  gpu_cew_quad.h  gpu_common.h  gpu_eri_assembler_spd.h  gpu_eri_grad_assembler_sp.h  gpu_get2e.cu  gpu_get2e_getxc_drivers.h  gpu_get2e_grad_ffff.cu  gpu_get2e_grad_ffff.cuh  gpu_get2e_subs.h  gpu_get2e_subs_grad.h  gpu_get2e_subs_hrr.h  gpu_getxc.cu  gpu_getxc.h  gpu_getxc_subs_generic.h  gpu_info.cu  gpu_info.h  gpu_lri.cu  gpu_lri_subs.h  gpu_lri_subs_grad.h  gpu_lri_subs_hrr.h  gpu_oei.cu  gpu_oei.h  gpu_oei_assembler.h  gpu_oei_classes.h  gpu_oei_definitions.h  gpu_oei_grad.h  gpu_startup.cu  gpu_type.h  gpu_write_info.f90  int.h  mgpu.h  xc_redistribute.cpp  xc_redistribute.h
src/lapack/: CMakeLists.txt  Makefile  Makefile.tmp  dgtsv.f  droundup_lwork.f  dummy.f  slartg.f90  temp.txt
src/lapack-patches/: blas-sharedlib.patch  lapack-sharedlib.patch  make.inc
src/legacy/: dftgradmpi.f90  gradient.f90  newdftoperator.f90
src/libxc/: .d.swp  CMakeLists.txt  Makefile  a  b  bckup_gpu_upload.cu  bckup_gpu_work_gga_x.cu  bckup_test.cu  bessel.c  c  config.h  d  expint_e1.c  fix_ifiles.pl  func_info.c  func_reference.c  funcs_gga.c  funcs_hyb_gga.c  funcs_hyb_mgga.c  funcs_key.c  funcs_lda.c  funcs_mgga.c  functionals.c  gga.c  gga_c_am05.c  gga_c_bcgp.c  gga_c_bmk.c  gga_c_cs1.c  gga_c_ft97.c  gga_c_gapc.c  gga_c_gaploc.c  gga_c_hcth_a.c  gga_c_lm.c  gga_c_lyp.c  gga_c_op_b88.c  gga_c_op_g96.c  gga_c_op_pbe.c  gga_c_op_pw91.c  gga_c_op_xalpha.c  gga_c_optc.c  (+228 more)
src/modules/: #quick_api_module.f90#  CMakeLists.txt  Makefile  hdf5_utils.f90  new_Makefile  (+69 more)
(+3479 files in other folders)
